<resources>
    <string name="app_name">Universal app</string>
    <string name="bmi_calculator">BMI calculator</string>
    <string name="countdown_timer">Countdown timer</string>
    <string name="choose">Universal App</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="alarm">Set alarm</string>
    <string name="weight">Your weight in kg:</string>
    <string name="height">Your height in cm:</string>
    <string name="result">Your result:</string>
    <string name="calculate">Calculate</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="hintHeight">Height</string>
    <string name="hintWeight">Weight</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="goBack">goBackToMainActivity</string>
    <string name="double_dot">:</string>
    <string name="_00">00</string>
    <string name="exampleOfHMS">Ex: hours:minutes:seconds</string>
    <string name="enter_time">Enter time</string>
    <string name="_59">59</string>
    <string name="_01">01</string>
    <string name="addNewAlarm">Add new alarm</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_alarm">Add Alarm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your name:</string>
    <string name="hintName">Name</string>
    <string name="next_image">Next image</string>
    <string name="image_shower">Image shower</string>
    <string name="show_list">Show List</string>
    <string name="name_recycler_view">Name:</string>
    <string name="weight_recycler_view">"Weight:"</string>
    <string name="height_recycler_view">"Weight:"</string>
    <string name="result_recycler_view">"Result:"</string>
</resources>