<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose"
        android:textSize="20sp"
        android:layout_marginBottom="50sp"
        android:layout_marginTop="150sp"/>

    <Button
        android:id="@+id/bmi_calculator"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/countdown_timer"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/countdown_timer"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/weather"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weather_forecast"
        android:layout_marginBottom="20sp"
        />

    <Button
        android:id="@+id/alarm"
        style="@style/Widget.Material3.Button.ElevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarm"
        android:layout_marginBottom="20sp"
        />

</androidx.appcompat.widget.LinearLayoutCompat>