<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".BmiCalculatorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bmi_calculator"
        android:textSize="30sp"
        android:layout_marginBottom="50sp"
        android:layout_marginTop="150sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/weight"
        android:textSize="20sp"
        android:layout_marginHorizontal="30sp"
        />

    <EditText
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:padding="12sp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_bg"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/height"
        android:textSize="20sp"
        android:layout_marginHorizontal="30dp"
        />

    <EditText
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:padding="12sp"
        android:inputType="numberDecimal"
        android:layout_marginBottom="15sp"
        android:background="@drawable/edit_bg"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30sp"
        android:layout_marginBottom="15sp"
        android:text="@string/calculate"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="35sp"
        android:layout_marginHorizontal="30dp"
        />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="50sp"
        />

</LinearLayout>