<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CountdownTimerForWorkoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="380sp"
        android:gravity="center">

        <EditText
            android:id="@+id/hour"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_background_for_timer"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/_01"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:inputType="number"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/double_dot"
            android:textColor="@color/md_theme_light_outline"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/min"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_background_for_timer"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/_00"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:inputType="number"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/double_dot"
            android:textColor="@color/md_theme_light_outline"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/second"
            android:layout_width="60sp"
            android:layout_height="60sp"
            android:background="@drawable/rounded_background_for_timer"
            android:fontFamily="@font/baloo"
            android:gravity="center"
            android:text="@string/_00"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:inputType="number"
            android:textStyle="bold" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="80sp"
        android:layout_marginBottom="150sp"
        app:srcCompat="@drawable/stop_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginEnd="80sp"
        android:layout_marginBottom="150sp"
        app:srcCompat="@drawable/pause_icon" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80sp"
        android:layout_marginBottom="150sp"
        android:src="@drawable/play_icon" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="30sp"
        android:layout_marginStart="80sp"
        android:layout_marginBottom="660sp"
        android:fontFamily="@font/baloo"
        android:text="@string/enter_time"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/hms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="80sp"
        android:layout_marginBottom="602dp"
        android:background="@drawable/edit_bg"
        android:fontFamily="@font/baloo"
        android:hint="@string/exampleOfHMS"
        android:inputType="time"
        android:padding="12sp" />

</RelativeLayout>